# Racerham

./: .clang-format  README.md  build.bat  build.sh  clean_build.bat  clean_build.sh  conanfile.txt  meson.build
Jnrlib/: BasicTypes.h  Check.h  Exceptions.h  FileHelpers.cpp  FileHelpers.h  Jnrlib.h  MemoryArena.h  Singletone.h  TypeHelpers.h  TypeMatching.h
scripts/: reinstall.sh.in
src/: Application.cpp  Application.h  main.cpp
src/Gameplay/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Game.cpp  Game.h  PhysicsDebugDraw.h  World.h
src/Gameplay/Components/: Base.h  Mesh.h  RigidBody.h  Update.h
src/Gameplay/Systems/: BasicRendering.cpp  BasicRendering.h  Physics.cpp  Physics.h  UpdateFrame.h
src/Renderer/: BatchRenderer.cpp  BatchRenderer.h  ShaderStructs.h
src/Renderer/Vulkan/: Buffer.h  CommandList.cpp  CommandList.h  Image.cpp  Image.h  LayoutTracker.cpp  LayoutTracker.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryTracker.cpp  MemoryTracker.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RootSignature.cpp  RootSignature.h  SynchronizationObjects.cpp  SynchronizationObjects.h  VulkanLoader.cpp  VulkanLoader.h
src/Renderer/Vulkan/Shaders/: basic.frag  basic.vert  color.vert
src/Utils/: Constants.h  Vertex.h
